--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -10,44 +10,66 @@
 }
 
 .imagem-logo{
-    width: 20%;
+    width: 100%;
+    border: 2px solid black;
+    box-sizing: border-box;
 }
 
 header{
     width: 80%;
     margin-top: 0;
-    background-color: #0984e3;
+    background-color: #851944;
     height: 150px;
-    border: 5px solid white;
-    /* border-bottom: 5px solid white;
-    border-right: 5px solid white;
-    border-left: 5px solid white; */
+    border: 10px solid black;
     text-align: center;
     line-height: 150px;
     box-sizing: border-box;
+    position: fixed;
+    left: 0;
+    float: left;
+    text-transform: uppercase;
 }
 
 main{
     text-indent: 20px;
     letter-spacing: 2px;
     width: 80%;
-    background-color: #0984e3;
+    /* background-color: #0984e3; */
     padding: 40px;
     box-sizing: border-box;
-    border-bottom: 5px solid white;
-    border-right: 5px solid white;
-    border-left: 5px solid white;
+    border-bottom: 5px solid black;
+    border-right: 5px solid black;
+    border-left: 5px solid black;
     display: inline-block;
+    margin-top: 150px;
+    color: black;
+    
 }
 
 aside{
     float: right;
     box-sizing: border-box;
-    background-color: #0984e3;
+    background-color: #3C1D3D;
     width: 20%;
     padding: 10px;
-    border: 5px solid white;
+    border: 5px solid black;
     height: 300px;
+    display: block;
+}
+
+ul{
+    list-style-type: none;
+    font-size: 20px;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .clear{
