--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -41,9 +41,9 @@ main{
     border-right: 5px solid black;
     border-left: 5px solid black; */
     display: inline-block;
-    margin-top: 150px;
+    margin-top: 130px;
+    margin-bottom: 20px;
     color: black;
-    height: 100vh;
 }
 
 aside{
@@ -88,7 +88,7 @@ footer{
 }
 
 .clear{
-    clear: right;
+    clear: both;
 }
 
 .navegacao{
