--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,7 +5,7 @@
 .container{
     background-color: #F5F5F5;
     font-family: 'Montserrat', sans-serif;
-    font-size: 120%;
+    font-size: 110%;
     color: white;
 }
 
@@ -31,7 +31,6 @@ header{
 }
 
 main{
-    text-indent: 20px;
     letter-spacing: 2px;
     width: 80%;
     /* background-color: #0984e3; */
@@ -43,7 +42,8 @@ main{
     display: inline-block;
     margin-top: 130px;
     margin-bottom: 20px;
-    color: black;
+    color: #3C1D3D;
+    font-weight: 540;
 }
 
 aside{
@@ -76,6 +76,11 @@ footer{
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+.main-content{
+    max-width: 500px;
+    margin: auto;
 }
 
 .facebook{
