--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -11,8 +11,9 @@
 
 .imagem-logo{
     width: 100%;
-    border: 2px solid black;
+    border: 3px solid #5352ed;
     box-sizing: border-box;
+    border-radius: 10px;
 }
 
 header{
